<resources>
    
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- TabLayout -->
    <string name="tabItemMain">Главная</string>
    <string name="tabItemNewVacation">Новый отпуск</string>
    <string name="tabItemDiagram">График</string>


    <!-- [Fragment] SplashScreen -->
    <string name="splash_screen_app_name">Отпускатор</string>
    <string name="login_screen_welcome_label">Добро пожаловать</string>
    <string name="login_screen_username_hint">Имя пользователя</string>
    <string name="login_screen_password_hint">Пароль</string>
    <string name="login_screen_login_button_text">Войти</string>
    <string name="login_screen_forgot_password_button_text">Забыли пароль?</string>

    <!-- [Fragment] FilterScreen -->
    <string name="filter_screen_apply">Применить</string>
    <string name="filter_screen_reset">Сбросить</string>

    <!-- [Fragment] DiagramScreen -->
    <string name="diagram_screen_title">График отпусков</string>

    <!-- [Fragment] EmployeeFilterScreen -->
    <string name="employee_filter_screen_title">Сотрудники</string>
    <string name="employee_filter_screen_edit_text_hint">Введите имя сотрудника</string>
    <string name="employee_filter_screen_selectAll_textView">Выбрать всех</string>

    <!-- [Fragment] PeriodFilterScreen -->
    <string name="period_filter_screen_title">Период</string>

</resources>